[package]
name = "mls-gigachad"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
dotenvy = "0.15"
scraper = "0.23.1"
