[package]
name = "mls-gigachad"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full", "signal"] }
tokio-util = "0.7"
futures = { version = "0.3"}
dotenvy = "0.15"
scraper = "0.23.1"
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
rocket_async_compression = "0.1"
